fixed elements need z-index

--- a/css-cement/framework.less
+++ b/css-cement/framework.less
@@ -100,7 +100,7 @@ body > * {width: 100%;
 		& img {margin-left: -50%; max-width: none;}
 	}
 // fixed elements
-.fixed {position: fixed; top: 0;
+.fixed {position: fixed; top: 0; z-index: 999;
 	&.fixed- {
 		&10 + * {margin-top: 10px;}
 		&20 + * {margin-top: 20px;}
